  Special:Upload after following a red link to a file.
* In SQLite full-text search feature: fixed "move page" feature, was non-
  functional.
* (bug xxxxx) Fixed Cache-Control headers sent from API modules, to protect
  user privacy in the case where an attacker can access the wiki through the
  same HTTP proxy as a logged-in user.

== Changes since 1.16 beta 2 ==

* Fixed bugs in the [[Special:Userlogin]] and [[Special:Emailuser]] handling of
  invalid usernames.
* Fixed sorting in [[Special:Allmessages]]
* (bug 23113) Fixed title in the show/hide links on diff pages
* (bug 23117) Fixed API rollback, was returning "badtoken" for valid requests
* (bug 23127) Re-added missing $1 parameter to the uploadtext message
* Fixed a bug in the Vector skin where personal tools display behind the logo
* (bug 23139) Fixed a bug in edit conflict resolution, where both textboxes 
  showed the same text.
* (bug 23115, bug 23124) Fixed various problems with <title> and <h1> elements
  in page views and previews when the language converter is enabled.
* (bug 23148) Fixed a local path disclosure vulnerability in ImageMagick image
  scaling, which was introduced in 1.16 beta 1. 
* Improved error checking on installer.
* (bug 22970) Fixed a JavaScript error in the upload destination conflict 
  check.
* (bug 23167) Check the watch checkbox by default if the watchcreations 
  preference is set.
* (bug 23171) Improve IE6 version check to avoid false positives.
* (bug 23176) Fixed upload warning override feature "upload new version", 
  broken in 1.16 beta 1.
* Fixed regression in unwatch links sent out in notification emails. When the 
  mailing job was deferred via the job queue, the title was incorrect.
* (bug 23534) Fixed SQL query error in API list=allusers.
* Fixed a bug in uploads for non-JavaScript clients. An empty string was used
  as the default destination filename, instead of the source filename as 
  expected.